--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,22 @@
     "name": "a2nt/silverstripe-member-profiles",
     "description": "SilverStripe extendable profile areas. Provides registration page and extendable profile page area.",
     "type": "silverstripe-module",
+    "homepage": "http://github.com/a2nt/silverstripe-member-profiles",
     "license": "BSD-3-Clause",
     "keywords": ["silverstripe", "members", "registration", "profile", "frontend"],
-    "require": {
-        "silverstripe/framework": "~3.1"
-    },
-    "extra": {
-        "installer-name": "member-profiles"
-    },
     "authors": [{
         "name": "Anton Fedianin",
         "homepage": "https://tony.twma.pro/",
         "role": "Developer"
-    }]
-
+    }],
+    "support": {
+        "issues": "http://github.com/a2nt/silverstripe-member-profiles/issues"
+    },
+    "require": {
+        "silverstripe/cms": "~3.1",
+        "silverstripe/framework": "~3.1"
+    },
+    "extra": {
+        "installer-name": "member-profiles"
+    }
 }
