--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,3 +1,3 @@
-Member:
+SilverStripe\Security\Member:
   extensions:
-    - MemberProfileExtension
+    - A2nt\MemberProfiles\Extensions\MemberProfileExtension
